
################################################################################
# changes in development version since last release 
################################################################################

# IntaRNA
- new arguments t|qPfScale to tune ViennaRNA pf_scale parameter used
  to scale partition functions for ED value computation to avoid overflows
- BUGFIX : sequence subset selection not supported when accessibilities are read
  from file 

################################################################################  
################################################################################

230201 Martin Raden
 * IntaRNA/AccessibilityVrna :
   * constructor() :
   * fillByRNAplfold()
     + pfScale parameter
 * bin/CommandLineParsing :
   + t|qPfScale : sequence-specific parameters for explicit pf_scale setup for
     accessibility computation of long sequences
 * IntaRNA/VrnaHandler :
   * getModel() 
     + explicit pfScale parameter for rescaling of VRNA exp_params if pfScale >= 1.0
   + getPfScaleDefault() : provides default value from Vienna package
 * README.md :
   + docu of Q overflow and pfScale usage


################################################################################
### version 3.3.2
################################################################################  

# IntaRNA
- compilation fix: correcting shared variables for parallelization
- BUGFIX debug check
- BUGFIX IntaRNAhelix traceback of helices where seed is not at right end

################################################################################  
################################################################################

220913 Martin Raden
 * IntaRNA/HelixHandlerNoBulgeMax:
   * traceBackHelixSeed() : bugfix: tracing of helices with seed-trailing bps

220505 Martin Raden
 * bin/IntaRNA :
   * compilation fix: removing queryNumber from shared variables, since constant
 * IntaRNA/PredictorMfe2d: